<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG1_Conveyer_Operation" Id="{fa1e73bd-a5a7-4194-991b-8213e2bc5537}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG1_Conveyer_Operation
VAR
	state: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
CASE GVL.PRG1_OperatieModus OF
	0:	//idle, wacht op object
		 
	1:	//running
		GVL.ladingGewicht := GVL.weegcelWaarde;									
		GVL.geschrevenSnelheid := FC1_Bereken_Snelheid(GVL.ladingGewicht,GVL.minimumLading,GVL.maximumLading,GVL.minimumSnelheid,GVL.maximumSnelheid);
	2:	//
			

END_CASE
//case functie, voor conveyerstatussen
]]></ST>
    </Implementation>
    <LineIds Name="PRG1_Conveyer_Operation">
      <LineId Id="18" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>